[tool.poetry]
name = "plm4newsrec"
version = "0.1.0"
description = ""
authors = ["mokarakaya <mokarakaya@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.7.13"
torch = "==1.13.1"
scikit-learn = "==0.22.1"
tensorflow = "==1.15.5"
tqdm = "==4.65.0"
transformers = "==4.26.1"
protobuf = "==3.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
